# qz

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  bz_best_config_sensitivity.json  scan_results.json  scanoss_results.json  swh_results.json
.claude/: settings.json
benchmarks/: results_10m_cuda.txt
crates/bz-cli/: Cargo.toml
crates/bz-cli/src/: main.rs
crates/bz-lib/: Cargo.toml
crates/bz-lib/src/: cli.rs  lib.rs
crates/bz-lib/src/compression/: archive.rs  compress.rs  decompress.rs  extract.rs  mod.rs  streams.rs  verify.rs
crates/bz-lib/src/io/: bam.rs  mod.rs
crates/bz-lib/tests/: integration_test.rs
crates/qz-cli/: Cargo.toml
crates/qz-cli/src/: main.rs
crates/qz-lib/: Cargo.toml  build.rs
crates/qz-lib/src/: cli.rs
crates/qz-lib/src/compression/: arithmetic_quality.rs  arithmetic_sequence.rs  bsc.rs  codecs.rs  compress_impl.rs  decompress_impl.rs  fqzcomp.rs  header_col.rs  mod.rs  quality.rs  quality_context.rs  quality_ctx.rs  quality_model.rs  read_id.rs  ultra.rs
crates/qz-lib/tests/: integration_test.rs
scripts/bz_optimizer/: config.py  fitness.py  ga.py  genome.py  main.py  sensitivity.py
scripts/optimizer/: checkpoint.py  config.py  fitness.py  ga.py  genome.py  llm_advisor.py  main.py  population.py
