[package]
name = "bz-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance BAM compression library using columnar encoding and BSC/BWT"

[lib]
name = "bz_lib"

[dependencies]
qz-lib.workspace = true
noodles.workspace = true
anyhow.workspace = true
rayon.workspace = true
tracing.workspace = true
tempfile.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
noodles.workspace = true
tempfile.workspace = true
